[package]
name = "upload-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
snafu = "0.8.2"
tokio = { version = "1.37.0", features = ["io-util", "fs"] }
reqwest = { version = "0.12.4", features = [
    "rustls-tls",
    "json",
    "http2",
    "charset",
    "stream",
], default-features = false, optional = true }
oauth2 = { version = "4", optional = true, default-features = false, features = [
    "rustls-tls",
] }
serde_json = { version = "1.0.117", optional = true }
serde = { version = "1.0.202", features = ["derive"], optional = true }
chrono = { version = "0.4.38", optional = true }
arc-swap = { version = "1.7.1", optional = true }
tracing = "0.1.40"
reqwest_dav = { version = "0.1.11", optional = true, default-features = false, features = [
    "rustls-tls",
] }
tokio-util = "0.7.11"

[dev-dependencies]
temp-dir = "0.1.13"
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["full"]

full = ["onedrive", "webdav"]
onedrive = ["reqwest", "oauth2", "serde_json", "serde", "chrono", "arc-swap"]
webdav = ["reqwest_dav", "reqwest"]
